# awgen_v5

./: .gitignore  Cargo.toml  build.sh  run_dev.sh  run_game.sh
assets/editor_scripts/: api.mjs  editor.mjs  events.mjs  main.mjs  settings.mjs  tileset.mjs
docs/images/raw/: architecture.dia
src/: camera.rs  gamestate.rs  main.rs  settings.rs  tileset.rs
src/blocks/: mesh.rs  mod.rs  model.rs  params.rs  shape.rs  systems.rs  tileset.rs
src/gizmos/: block_face.glb  cursor.rs  face.rs  mod.rs
src/logic/: api.rs  channels.rs  commands.rs  events.rs  messages.rs  mod.rs  queries.rs  queue.rs  resources.rs  systems.rs
src/map/: chunk.rs  mod.rs  pos.rs  remesh.rs  tileset.rs  world.rs
src/map/blocks/: mesh.rs  mod.rs  model.rs  occlusion.rs  shape.rs  systems.rs
src/map/editor/: mod.rs  placement.rs  startup.rs  systems.rs
src/math/: dir.rs  mod.rs  pos.rs  rot.rs
src/tileset/: tileset.wgsl
src/tools/: mod.rs
src/ui/: menu.rs  mod.rs  splash.rs
src/ui/block_editor/: block_face_rotation.glb  helper.rs  mod.rs  preview.rs  temp.rs  tileset.rs  ui.rs
src/ui/gui3d/: mod.rs  renderer.rs
src/ui/hotbar/: mod.rs  resource.rs  systems.rs
src/ui/splash/: mod.rs
src/utilities/: chunk_iter.rs  meshbuf.rs  mod.rs  vec_cmp.rs
src/utilities/raycast/: block.rs  mod.rs  voxel_iter.rs
templates/default/: settings.awgen
templates/default/assets/models/: sign1.glb
templates/default/assets/scripts/: main.mjs
