[package]
name = "awgen"
description = "The Awgen game engine and runtime."
version = "0.1.0"
edition = "2021"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]

[dependencies]
bevy = "0.14"
bitflags = "2.6.0"

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlite = { version = "0.36.1", features = ["bundled"] }
thiserror = "1"
tinyvec = { version = "1.8.0", features = ["alloc"] }

[features]
editor = []

[profile.release]
strip = true
lto = true
